fix voicemail spacing issue

--- a/src/pages/messages/messages.scss
+++ b/src/pages/messages/messages.scss
@@ -170,7 +170,7 @@ topicWithBursts {
 }
 
 .messages__wrap--file {
-	padding: 10px 0;
+	padding: 0;
 }
 
 .message__file {
